--- a/account.html
+++ b/account.html
@@ -6,37 +6,24 @@
 <title>الحساب - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<style>
-/* تصميم عام */
-body { font-family: 'Cairo', sans-serif; direction: rtl; margin:0; background: linear-gradient(180deg,#f7fbff,#ffffff);}
-.app { max-width: 980px; margin:24px auto 110px; padding:18px;}
-.app-header { text-align:center; margin-bottom:14px;}
-.app-header h1{margin:0; background:linear-gradient(90deg,#4f46e5,#0ea5e9); -webkit-background-clip:text; color:transparent; font-weight:800;}
-.app-header p { margin:8px 0 0 0; color:#6b7280; font-size:13px;}
-.card{background:#fff; border-radius:14px; padding:18px; box-shadow:0 12px 30px rgba(15,23,42,0.08); margin-bottom:14px; transform: translateY(18px); opacity:0; transition: transform .6s, opacity .6s;}
-input[type=text], input[type=number] { width:100%; padding:10px; border-radius:10px; border:1px solid #e6e9ef; margin-bottom:8px; }
-input:focus { outline:none; border-color:#4f46e5; box-shadow:0 8px 30px rgba(79,70,229,0.06);}
-button { padding:10px 18px; border-radius:10px; border:none; cursor:pointer; font-weight:800; margin-top:8px;}
-.btn-primary { background:linear-gradient(90deg,#4f46e5,#0ea5e9); color:#fff; }
-.btn-logout { background:#ef4444; color:#fff; }
-.section { margin-bottom:20px; }
-.section h3 { text-align:center; background:#4f46e5; color:#fff; padding:10px; border-radius:10px; margin-bottom:10px;}
-</style>
 </head>
 <body>
 <div class="app">
-  <div class="app-header">
+  <!-- البار العلوي -->
+  <header class="app-header">
     <h1>حساب الطالب</h1>
     <p>عرض وتعديل البيانات الشخصية والمالية</p>
-  </div>
+  </header>
 
   <div class="card" id="accountCard">
-    <div id="infoSection" class="section">
+    <!-- قسم معلومات الطالب -->
+    <div class="section" id="infoSection">
       <h3>معلومات الطالب</h3>
       <div id="infoFields"></div>
     </div>
 
-    <div id="financeSection" class="section">
+    <!-- قسم المعلومات المالية -->
+    <div class="section" id="financeSection">
       <h3>المعلومات المالية</h3>
       <div id="financeFields"></div>
     </div>
@@ -47,28 +34,37 @@ button { padding:10px 18px; border-radius:10px; border:none; cursor:pointer; fon
   </div>
 </div>
 
+<!-- البار السفلي -->
 <nav class="bottom-nav">
-  <a href="account.html" class="active">👤<span>الحساب</span></a>
-  <a href="grades.html">📚<span>الدرجات</span></a>
-  <a href="notifications.html">🔔<span>التبليغات</span></a>
-  <a href="chat.html">💬<span>الدردشة</span></a>
+  <a href="account.html" class="nav-item active">👤<span>الحساب</span></a>
+  <a href="grades.html" class="nav-item">📚<span>الدرجات</span></a>
+  <a href="notifications.html" class="nav-item">🔔<span>التبليغات</span></a>
+  <a href="chat.html" class="nav-item">💬<span>الدردشة</span></a>
 </nav>
 
 <script>
-const SHEET_API_URL = "YOUR_GOOGLE_SHEET_API_URL"; // ضع هنا رابط Google Apps Script
+const SHEET_API_URL = "YOUR_GOOGLE_SHEET_API_URL"; // ضع رابط Google Apps Script هنا
 
-async function fetchSheetData(){
-  const resp = await fetch(SHEET_API_URL, {cache:"no-store"});
-  if(!resp.ok) throw new Error("فشل في جلب البيانات من Google Sheets");
-  const json = await resp.json();
-  return json;
-}
-
+// جلسة المستخدم
 function getSession(){ return JSON.parse(sessionStorage.getItem('studentData')||'null'); }
 function saveSession(obj){ sessionStorage.setItem('studentData', JSON.stringify(obj)); }
 function requireLogin(){ if(!getSession()){ window.location.href='index.html'; return false;} return true; }
 
-document.addEventListener('DOMContentLoaded', async ()=>{
+// جلب البيانات من Google Sheet
+async function fetchSheetData(){
+  const resp = await fetch(SHEET_API_URL, {cache:"no-store"});
+  if(!resp.ok) throw new Error("فشل في جلب البيانات من Google Sheets");
+  return await resp.json();
+}
+
+// البحث حسب ولي الأمر وكود الطالب
+async function findByParentAndCode(parent, code){
+  const data = await fetchSheetData();
+  return data.find(r => r['رقم ولي الامر'] == parent && r['كود الطالب'] == code);
+}
+
+// عرض البيانات في الصفحة
+async function renderAccount(){
   if(!requireLogin()) return;
   gsap.to('#accountCard', {duration:0.7, opacity:1, y:0, ease:'power3.out'});
 
@@ -76,10 +72,9 @@ document.addEventListener('DOMContentLoaded', async ()=>{
   const infoFieldsContainer = document.getElementById('infoFields');
   const financeFieldsContainer = document.getElementById('financeFields');
 
-  // الحقول القابلة للتعديل
   const editableFields = ['رقم الطالب','رقم ولي الامر','رقم الخط','المدرسة القادم منها','العنوان'];
 
-  // عرض معلومات الطالب
+  // معلومات الطالب
   const infoFields = ["id","اسم الطالب","الصف","القاعة","الجنس","رقم ولي الامر","رقم الخط","الملاحظات","كود الطالب","رقم الطالب","الكتب","العنوان","اسم الام","المدرسة القادم منها","المعدل"];
   infoFields.forEach(f=>{
     const val = student[f]||'';
@@ -90,7 +85,7 @@ document.addEventListener('DOMContentLoaded', async ()=>{
     }
   });
 
-  // عرض المعلومات المالية
+  // المعلومات المالية
   const financeFields = ["القسط 1","تاريخ 1","القسط 2","تاريخ 2","القسط 3","تاريخ 3","القسط 4","تاريخ 4","القسط 5","تاريخ 5","القسط 6","تاريخ 6","القسط 7","تاريخ 7","القسط 8","تاريخ 8","الباقي الكلي","المبلغ الكلي","الواصل الكلي","الكفالة","مبلغ الكفالة"];
   financeFields.forEach(f=>{
     const val = student[f]||'';
@@ -100,9 +95,7 @@ document.addEventListener('DOMContentLoaded', async ()=>{
   // حفظ البيانات المعدلة
   document.getElementById('saveBtn').addEventListener('click', async ()=>{
     const updatedData = {...student};
-    editableFields.forEach(f=>{ updatedData[f] = document.getElementById(f).value.trim(); });
-
-    // تحديث Google Sheet
+    editableFields.forEach(f=> updatedData[f] = document.getElementById(f).value.trim());
     try{
       const resp = await fetch(SHEET_API_URL+"?action=update",{
         method:"POST",
@@ -122,11 +115,15 @@ document.addEventListener('DOMContentLoaded', async ()=>{
     }
   });
 
+  // تسجيل الخروج
   document.getElementById('logoutBtn').addEventListener('click', ()=>{
     sessionStorage.clear();
     window.location.href='index.html';
   });
-});
+}
+
+// تهيئة الصفحة
+document.addEventListener('DOMContentLoaded', renderAccount);
 </script>
 </body>
 </html>
