--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
 <title>تسجيل الدخول - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script src="main.js" defer></script>
+<style>
+body { font-family:'Cairo',sans-serif; direction:rtl; margin:0; background: linear-gradient(180deg,#f7fbff,#ffffff);}
+.app { max-width: 400px; margin:60px auto 0; padding:24px; }
+.app-header { text-align:center; margin-bottom:24px; }
+.app-header h1{ margin:0; background:linear-gradient(90deg,#4f46e5,#0ea5e9); -webkit-background-clip:text; color:transparent; font-weight:800; }
+.app-header p { margin:8px 0 0 0; color:#6b7280; font-size:13px; }
+.input-row { display:flex; flex-direction:column; gap:12px; margin-bottom:16px; }
+.input-row input { padding:10px; border-radius:8px; border:1px solid #ccc; width:100%; box-sizing:border-box; }
+button { padding:12px; border:none; border-radius:10px; cursor:pointer; font-weight:700; }
+button.primary { background: linear-gradient(90deg,#4f46e5,#0ea5e9); color:#fff; transition:all 0.3s ease; }
+button.primary:hover { transform:translateY(-2px); box-shadow:0 6px 15px rgba(79,70,229,0.4); }
+button.yellow { background:#fbbf24; color:#fff; }
+.note { text-align:center; margin-top:12px; color:#ef4444; }
+
+/* شريط التنقل السفلي مخفي افتراضيًا */
+.bottom-nav { display:none; position: fixed; bottom:0; left:0; right:0; height:60px; background:#fff; display:flex; justify-content:space-around; align-items:center; box-shadow:0 -4px 15px rgba(0,0,0,0.08);}
+.bottom-nav a { text-decoration:none; color:#6b7280; font-size:12px; display:flex; flex-direction:column; align-items:center;}
+.bottom-nav a.active { color:#4f46e5; }
+</style>
 </head>
 <body>
+
 <div class="app">
   <div class="app-header">
     <h1>🎓 ثانوية التحدي الأهلية</h1>
@@ -16,40 +35,61 @@
   </div>
 
   <div class="input-row">
-    <div class="field"><input id="parentNumber" type="text" placeholder="أدخل رقم ولي الأمر"></div>
-    <div class="field"><input id="studentCode" type="text" placeholder="أدخل كود الطالب"></div>
-    <button class="primary" onclick="login()">دخول</button>
+    <input id="parentNumber" type="text" placeholder="أدخل رقم ولي الأمر">
+    <input id="studentCode" type="text" placeholder="أدخل كود الطالب">
+    <button class="primary" id="loginBtn">دخول</button>
     <button class="yellow" onclick="window.location.href='forgot.html'">نسيت الكود؟</button>
   </div>
 
   <div id="message" class="note"></div>
 </div>
 
-<nav class="bottom-nav">
+<nav class="bottom-nav" id="bottomNav">
   <a href="account.html" class="nav-item"><span>الحساب</span></a>
   <a href="grades.html" class="nav-item"><span>الدرجات</span></a>
   <a href="notifications.html" class="nav-item"><span>التبليغات</span></a>
 </nav>
 
 <script>
-async function login(){
-  const parent = document.getElementById('parentNumber').value.trim();
-  const code = document.getElementById('studentCode').value.trim();
-  const msg = document.getElementById('message');
-  if(!parent || !code){ msg.textContent = "⚠️ الرجاء إدخال رقم ولي الأمر وكود الطالب"; return; }
+// التحقق من وجود جلسة سابقة
+document.addEventListener('DOMContentLoaded', ()=>{
+  const sessionStudent = sessionStorage.getItem('studentData');
 
-  msg.textContent = "⏳ جاري التحقق...";
-  try{
-    const student = await PortalAPI.findByParentAndCode(parent, code);
-    if(!student){ msg.textContent = "❌ بيانات غير موجودة"; return; }
-    PortalAPI.saveSession(student);
-    msg.textContent = "✅ تسجيل الدخول بنجاح!";
-    setTimeout(()=>window.location.href='account.html',500);
-  }catch(e){
-    msg.textContent = "❌ حدث خطأ أثناء الاتصال بالبيانات";
-    console.error(e);
+  // إذا كان الطالب مسجل دخول مسبقًا
+  if(sessionStudent){
+    document.getElementById('bottomNav').style.display = 'flex'; // إظهار البار
+    window.location.replace('account.html');
+    return;
   }
-}
+
+  const loginBtn = document.getElementById('loginBtn');
+  const msg = document.getElementById('message');
+
+  loginBtn.addEventListener('click', async ()=>{
+    msg.textContent = "";
+    const parent = document.getElementById('parentNumber').value.trim();
+    const code = document.getElementById('studentCode').value.trim();
+    if(!parent || !code){ msg.textContent = "⚠️ الرجاء إدخال جميع الحقول"; return; }
+
+    msg.textContent = "⏳ جاري التحقق...";
+    try{
+      const student = await PortalAPI.findByParentAndCode(parent, code);
+
+      if(!student){ msg.textContent = "❌ بيانات غير موجودة"; return; }
+
+      sessionStorage.setItem('studentData', JSON.stringify(student));
+      msg.textContent = "✅ تسجيل الدخول بنجاح!";
+
+      // بعد تسجيل الدخول إظهار البار السفلي
+      document.getElementById('bottomNav').style.display = 'flex';
+      setTimeout(()=> window.location.replace('account.html'), 500);
+    } catch(e){
+      msg.textContent = "❌ حدث خطأ أثناء الاتصال بالبيانات";
+      console.error(e);
+    }
+  });
+});
 </script>
+
 </body>
 </html>
