--- a/index.html
+++ b/index.html
@@ -4,26 +4,89 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>تسجيل الدخول - ثانوية التحدي</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <style>
-body { font-family:'Cairo',sans-serif; direction:rtl; margin:0; background: linear-gradient(180deg,#f7fbff,#ffffff);}
-.app { max-width: 400px; margin:60px auto 0; padding:24px; }
-.app-header { text-align:center; margin-bottom:24px; }
-.app-header h1{ margin:0; background:linear-gradient(90deg,#4f46e5,#0ea5e9); -webkit-background-clip:text; color:transparent; font-weight:800; }
-.app-header p { margin:8px 0 0 0; color:#6b7280; font-size:13px; }
-.input-row { display:flex; flex-direction:column; gap:12px; margin-bottom:16px; }
-.input-row input { padding:10px; border-radius:8px; border:1px solid #ccc; width:100%; box-sizing:border-box; }
-button { padding:12px; border:none; border-radius:10px; cursor:pointer; font-weight:700; }
-button.primary { background: linear-gradient(90deg,#4f46e5,#0ea5e9); color:#fff; transition:all 0.3s ease; }
-button.primary:hover { transform:translateY(-2px); box-shadow:0 6px 15px rgba(79,70,229,0.4); }
-button.yellow { background:#fbbf24; color:#fff; }
-.note { text-align:center; margin-top:12px; color:#ef4444; }
+:root{
+  --primary-start: #4f46e5;
+  --primary-end: #0ea5e9;
+  --accent-red: #ef4444;
+  --accent-red-light: #ffe5e5;
+  --accent-yellow: #facc15;
+  --accent-yellow-light: #fff9e0;
+  --muted: #6b7280;
+  --bg: linear-gradient(180deg,#f7fbff,#ffffff);
+  --card: #ffffff;
+  --radius: 14px;
+  --shadow: 0 12px 30px rgba(15,23,42,0.08);
+}
 
-/* شريط التنقل السفلي مخفي افتراضيًا */
-.bottom-nav { display:none; position: fixed; bottom:0; left:0; right:0; height:60px; background:#fff; display:flex; justify-content:space-around; align-items:center; box-shadow:0 -4px 15px rgba(0,0,0,0.08);}
-.bottom-nav a { text-decoration:none; color:#6b7280; font-size:12px; display:flex; flex-direction:column; align-items:center;}
-.bottom-nav a.active { color:#4f46e5; }
+*{box-sizing:border-box;}
+html,body{height:100%; margin:0; padding:0; font-family:'Cairo',sans-serif; direction:rtl; background:var(--bg); -webkit-font-smoothing:antialiased;}
+
+.app { max-width:980px; margin:24px auto 120px; padding:18px; }
+.app-header{text-align:center; margin-bottom:14px;}
+.app-header h1{
+  margin:0;
+  font-size:24px;
+  font-weight:800;
+  background:linear-gradient(90deg,var(--primary-start),var(--primary-end));
+  -webkit-background-clip:text;
+  color:transparent;
+}
+.app-header p{margin:6px 0 0 0; color:var(--muted); font-size:14px;}
+
+.input-row{display:flex;gap:12px;flex-wrap:wrap;}
+.field{flex:1;min-width:140px;}
+input[type="text"], input[type="number"]{
+  width:100%;
+  padding:12px 14px;
+  border-radius:10px;
+  border:1px solid #e6e9ef;
+  font-size:14px;
+  transition:box-shadow .18s, border-color .18s;
+}
+input:focus{outline:none;border-color: rgba(79,70,229,0.9);box-shadow:0 8px 30px rgba(79,70,229,0.06);}
+button{padding:10px 18px; border-radius:10px; border:none; cursor:pointer; font-weight:800; transition: all .18s ease;}
+button.primary{ background: linear-gradient(90deg,var(--primary-start),var(--primary-end)); color:#fff; }
+button.ghost{ background:transparent; color:var(--primary-start); border:1px solid rgba(79,70,229,0.08);}
+button.warn{ background:var(--accent-red); color:#fff; }
+button.yellow{ background: var(--accent-yellow); color: #000; }
+
+.note{ color:var(--muted); text-align:center; margin-top:8px; }
+.error{ color:var(--accent-red); font-weight:700; text-align:center; margin-top:8px;}
+.success{ color:#16a34a; font-weight:700; text-align:center; margin-top:8px;}
+
+.table{width:100%; border-collapse:collapse; margin-top:10px;}
+.table th, .table td{padding:8px 10px; border:1px solid #f1f3f5; text-align:right;}
+.table th{background: linear-gradient(90deg,var(--primary-start),var(--primary-end)); color:#fff; font-weight:800;}
+
+.bottom-nav{
+  display:none;
+  position:fixed;
+  bottom:14px;
+  left:50%;
+  transform:translateX(-50%);
+  background: linear-gradient(180deg,#ffffff,#f7fbff);
+  border-radius:24px;
+  box-shadow:0 12px 36px rgba(2,6,23,0.12);
+  display:flex;
+  gap:6px;
+  padding:8px;
+  z-index:999;
+}
+.nav-item{
+  display:flex; flex-direction:column; gap:4px; align-items:center; justify-content:center;
+  padding:8px 14px; border-radius:12px; text-decoration:none; color:var(--muted); font-weight:700; font-size:13px;
+  transition:all .18s ease;
+}
+.nav-item svg{width:20px;height:20px;}
+.nav-item.active{ background: linear-gradient(90deg,var(--primary-start),var(--primary-end)); color:#fff; transform:translateY(-6px); box-shadow:0 18px 40px rgba(79,70,229,0.16);}
+
+@media (max-width:760px){
+  .app{ margin:12px 12px 140px; padding:12px; }
+  .nav-item span{ font-size:12px; }
+}
 </style>
 </head>
 <body>
@@ -51,40 +114,85 @@ button.yellow { background:#fbbf24; color:#fff; }
 </nav>
 
 <script>
-// التحقق من وجود جلسة سابقة
-document.addEventListener('DOMContentLoaded', ()=>{
-  const sessionStudent = sessionStorage.getItem('studentData');
+// رابط Google Sheet (CSV)
+const SHEET_API_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vReghaYoMk3f8ffSBLRHIwZieEWCfk5Yx8W6c843TXkC6wpA78Z0X5nw21RRpxMdQ/pub?gid=1229272896&single=true&output=csv";
 
-  // إذا كان الطالب مسجل دخول مسبقًا
+// تحليل CSV
+function parseCSV(text){
+  const rows=[], rowArr=[];
+  let cur='', inQuotes=false;
+  for(let i=0;i<text.length;i++){
+    const ch = text[i], nxt = text[i+1];
+    if(ch === '"'){ if(inQuotes && nxt === '"'){ cur+='"'; i++; continue;} inQuotes=!inQuotes; continue;}
+    if(ch === '\r') continue;
+    if(ch === ',' && !inQuotes){ rowArr.push(cur); cur=''; continue;}
+    if(ch === '\n' && !inQuotes){ rowArr.push(cur); rows.push(rowArr); rowArr.length=0; cur=''; continue;}
+    cur+=ch;
+  }
+  if(cur!=='' || rowArr.length){ rowArr.push(cur); rows.push(rowArr); }
+  return rows;
+}
+
+// جلب البيانات من Google Sheet
+async function fetchSheetData(){
+  const resp = await fetch(SHEET_API_URL,{cache:"no-store"});
+  if(!resp.ok) throw new Error("فشل في جلب البيانات");
+  const text = await resp.text();
+  const rows = parseCSV(text);
+  const header = rows[0].map(h=>h.trim());
+  const dataRows = rows.slice(1);
+  return dataRows.map(r=>{
+    const obj={};
+    for(let i=0;i<header.length;i++) obj[header[i]]=r[i]?.trim()||"";
+    return obj;
+  });
+}
+
+// دوال الجلسة
+function normalizeNumber(n){ return n?.toString().trim().replace(/^0+/,''); }
+function saveSession(obj){ sessionStorage.setItem('studentData',JSON.stringify(obj)); }
+function getSession(){ try{return JSON.parse(sessionStorage.getItem('studentData')||'null');}catch(e){return null;} }
+
+// البحث حسب رقم ولي الأمر وكود الطالب
+async function findByParentAndCode(parent, code){
+  const data = await fetchSheetData();
+  parent = normalizeNumber(parent);
+  code = code.toString().trim();
+  return data.find(r => normalizeNumber(r['رقم ولي الامر']||'') === parent
+                     && ((r['كود الطالب']||r['كود']||r['id']||'') === code));
+}
+
+// معالجة تسجيل الدخول
+document.addEventListener('DOMContentLoaded', ()=>{
+  const bottomNav = document.getElementById('bottomNav');
+  const loginBtn = document.getElementById('loginBtn');
+  const msg = document.getElementById('message');
+
+  // إذا كان هناك جلسة سابقة، توجيه مباشر للصفحة الرئيسية
+  const sessionStudent = getSession();
   if(sessionStudent){
-    document.getElementById('bottomNav').style.display = 'flex'; // إظهار البار
+    bottomNav.style.display = 'flex';
     window.location.replace('account.html');
     return;
   }
-
-  const loginBtn = document.getElementById('loginBtn');
-  const msg = document.getElementById('message');
 
   loginBtn.addEventListener('click', async ()=>{
     msg.textContent = "";
     const parent = document.getElementById('parentNumber').value.trim();
     const code = document.getElementById('studentCode').value.trim();
-    if(!parent || !code){ msg.textContent = "⚠️ الرجاء إدخال جميع الحقول"; return; }
+    if(!parent || !code){ msg.textContent="⚠️ الرجاء إدخال جميع الحقول"; return; }
 
-    msg.textContent = "⏳ جاري التحقق...";
+    msg.textContent="⏳ جاري التحقق...";
     try{
-      const student = await PortalAPI.findByParentAndCode(parent, code);
+      const student = await findByParentAndCode(parent, code);
+      if(!student){ msg.textContent="❌ بيانات غير موجودة"; return; }
 
-      if(!student){ msg.textContent = "❌ بيانات غير موجودة"; return; }
-
-      sessionStorage.setItem('studentData', JSON.stringify(student));
-      msg.textContent = "✅ تسجيل الدخول بنجاح!";
-
-      // بعد تسجيل الدخول إظهار البار السفلي
-      document.getElementById('bottomNav').style.display = 'flex';
-      setTimeout(()=> window.location.replace('account.html'), 500);
-    } catch(e){
-      msg.textContent = "❌ حدث خطأ أثناء الاتصال بالبيانات";
+      saveSession(student);
+      msg.textContent="✅ تسجيل الدخول بنجاح!";
+      bottomNav.style.display = 'flex';
+      setTimeout(()=>window.location.replace('account.html'),500);
+    }catch(e){
+      msg.textContent="❌ حدث خطأ أثناء الاتصال بالبيانات";
       console.error(e);
     }
   });
